# mangetamain

./: .buildinfo  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  architecture.html  genindex.html  index.html  installation.html  mangetamain.config.html  mangetamain.core.app_logging.html  mangetamain.core.clustering.clustering_ingredients.html  mangetamain.core.clustering.clustering_nutrivalues.html  mangetamain.core.clustering.clustering_recipes.html  mangetamain.core.clustering.clustering_time_tags.html  mangetamain.core.clustering.html  mangetamain.core.dataset.html  mangetamain.core.html  mangetamain.core.interactions_eda.html  mangetamain.core.recipes_eda.html  mangetamain.html  mangetamain.main.html  mangetamain.preprocessing.html  modules.html  objects.inv  overview.html  poetry.toml  py-modindex.html  pyproject.toml  reviews.ipynb  search.html  searchindex.js  setup.sh  usage.html  utils.py
.github/workflows/: build-publish-docker.yml  docs-sphinx.yml  python-linter.yml  python-tests.yml  sphinx.yml
.streamlit/: config.toml
_modules/: index.html
_modules/mangetamain/: main.html
_modules/mangetamain/core/: app_logging.html  dataset.html  interactions_eda.html  recipes_eda.html
_modules/mangetamain/core/clustering/: clustering_ingredients.html  clustering_nutrivalues.html  clustering_recipes.html  clustering_time_tags.html
_sources/: mangetamain.config.rst.txt  mangetamain.core.app_logging.rst.txt  mangetamain.core.clustering.clustering_ingredients.rst.txt  mangetamain.core.clustering.clustering_nutrivalues.rst.txt  mangetamain.core.clustering.clustering_recipes.rst.txt  mangetamain.core.clustering.clustering_time_tags.rst.txt  mangetamain.core.clustering.rst.txt  mangetamain.core.dataset.rst.txt  mangetamain.core.interactions_eda.rst.txt  mangetamain.core.recipes_eda.rst.txt  mangetamain.core.rst.txt  mangetamain.main.rst.txt  mangetamain.preprocessing.rst.txt  mangetamain.rst.txt
app_utils/: io.py  ui.py
data/: get_raw_data.py
docs/source/: architecture.rst  conf.py  index.rst  installation.rst  modules.rst  overview.rst  usage.rst
docs/source/_static/: image.css
guides/: INSTALLATION.md
pages/: 01_Data_Quality_Prepare.py  02_Explorer.py  03_Country_Region.py  04_Events_Season.py  05_Clustering.py  06_Admin.py  07_About.py
scripts/: preprocess_dataset.py
src/mangetamain/: __main__.py  config.py  main.py  map.py  test_map_st.py
src/mangetamain/app/: Home.py
src/mangetamain/app/app_utils/: country.py  filters.py  io.py  ui.py  viz.py
src/mangetamain/app/pages/: 01_Explorer_Recipes.py  02_Explorer_Interactions.py  03_Country_Region.py  04_Events_Season.py  05_Analyse_Interactions.py  05_Clustering.py  06_Admin.py  07_About.py  08_clustering.py  09_clustering_ingredients.py  about_page.py  admin_page.py  home_page.py
src/mangetamain/app/pages/recipes/: clustering_page.py  (+2 more)
src/mangetamain/core/: app_logging.py  clustering_nutriscore.py  clustering_recipes.py  dataset.py  interactions_eda.py  interactions_preprocess.py  logging.py  recipes_eda.py  recipes_preprocessing.py  recipes_service.py  service_reviews.py
src/mangetamain/core/clustering/: __init__.py  clustering_ingredients.py  clustering_nutrivalues.py  clustering_recipes.py  clustering_time_tags.py
src/mangetamain/core/handlers/: country_handler.py  recipes_handler.py  seasonnality_handler.py
src/mangetamain/core/map_builder/: map.py
src/mangetamain/core/utils/: string_utils.py  utils.py
src/mangetamain/preprocessing/: fectch_country.ipynb
src/mangetamain/preprocessing/interactions/: EDA_reviews.py
src/mangetamain/preprocessing/recipes/: EDA_seasonality.ipynb
src/scripts/: preprocess_dataset.py
tests/: conftest.py  test_dataset_utils.py  test_interactions_eda.py  test_recipes_eda.py  test_string_utils.py
(+15 files in other folders)
