[tool.poetry]
name = "mangetamain"
version = "1.0.0"
description = ""
readme = "README.md"

authors = [
    "Bryan LY <bryan29.ly@gmail.com>",
    "Khalil OUNIS <khalilounis10@gmail.com>",
    "Mohammed ELAMINE <elamine.mohammed.14@gmail.com>",
    "Lokeshwaran VENGADABADY <lokeshvengadabady@gmail.com>",
    "Lina RHIATI HAZIME <lina.rhiati2@gmail.com>"
]

license = "MIT"

packages = [
    { include = "mangetamain", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = ">=1.50.0,<2.0.0"
plotly = ">=6.3.1,<7.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
sqlalchemy = "^2.0.44"
streamlit-lottie = "^0.0.5"
wordcloud = "^1.9.4"
rapidfuzz = "^3.14.1"
nltk = "^3.9.2"
streamlit-charts = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
sphinx = ">=8.2.3,<9.0.0"
sphinx-rtd-theme = ">=3.0.2,<4.0.0"
ghp-import = ">=2.1.0,<3.0.0"
flake8 = ">=7.0.0,<8.0.0"


[tool.poetry.group.test.dependencies]
ruff = "^0.14.2"
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
